--- a/docs/latex/tex/B_Requisitos.tex
+++ b/docs/latex/tex/B_Requisitos.tex
@@ -207,7 +207,7 @@ Frecuencia                               & Alta \\
 	\multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
 	& 1    & Escoger del menú lateral la parte de 'About me'.
 	\\\cline{2-3}
-	& 2    & Pulsar en los "iconbuttons' para mostrar el contenido seleccionado en el navegador. En el caso el botón sea de correo, nos tiene que abrir la aplicación correspondiente para mandar un feedback.
+	& 2    & Pulsar en los iconbuttons para mostrar el contenido seleccionado en el navegador. Si el botón es el de correo, se tiene que abrir la aplicación correspondiente para mandar un feedback.
 	\\\hline
 	Postcondiciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.} \\\hline
 	Excepciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.}\\\hline
@@ -225,7 +225,7 @@ Frecuencia                               & Alta \\
 	Requisitos                         	   & \multicolumn{2}{p{10.25cm}}{RF-5, RF-5.1, RF-5.2} \\\cline{1-3}
 	Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Haber realizado el requisito funcional uno. Producir un 'game over' en el juego del snake.}   \\\hline
 	\multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-	& 1    & Disponible en las ventanas apropiadas. Si son pulsados, nos deben de abrir el navegador o la 'play store'.
+	& 1    & Disponible en las ventanas apropiadas. Al ser pulsadas, se debe abrir el navegador o la 'play store'.
 	\\\cline{2-3}
 	& 2    & En el juego del snake, ver el video hasta completar el tiempo requerido del mismo, para que nos den otra vida.
 	\\\hline
@@ -245,13 +245,13 @@ Frecuencia                               & Alta \\
 	Requisitos                         	   & \multicolumn{2}{p{10.25cm}}{RF-6, RF-6.1, RF-6.2, RF-6.3, RF-6.4 } \\\cline{1-3}
 	Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Ninguna.}   \\\hline
 	\multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-	& 1    & Abrir el menú lateral para navegar a la pestaña de juegos, una vez dentro tenemos que elegir el juego del snake.
+	& 1    & Abrir el menú lateral para navegar a la pestaña de juegos, una vez dentro se elige el juego del snake.
 	\\\cline{2-3}
 	& 2    & Intentar conseguir la mayor puntuación posible.
 	\\\cline{2-3}
-	& 3    & Si morimos, ver video para continuar con la partida.
+	& 3    & Si morimos, se puede ver un vídeo para continuar con la partida.
 	\\\cline{2-3}
-	& 4    & En el caso de tener mejora de puntuación, mostrar el formulario para compartirla.
+	& 4    & En el caso de tener una mejor puntuación se mostrará el formulario para compartirla.
 	\\\hline
 	Postcondiciones                        & \multicolumn{2}{p{10.25cm}}{Mostrar el ranking del snake.} \\\hline
 	Excepciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.}\\\hline
@@ -265,13 +265,13 @@ Frecuencia                               & Alta \\
 	\multicolumn{3}{l}{Caso de uso 7: Juego cuatro en raya online} \\
 }
 {
-	Descripción                            & \multicolumn{2}{p{10.25cm}}{Dar la capacidad a los jugadores de crear o unirse a partidas, con el fin de poder batirse en batallas del cuatro en raya. Durante estas tiene que ser posible el envio de mensajes cortos.} \\\hline
+	Descripción                            & \multicolumn{2}{p{10.25cm}}{Ofrecer a los jugadores la oportunidad de crear o unirse a partidas, con el fin de poder batirse en batallas del cuatro en raya. Durante dichas partidas tiene que ser posible el envío de mensajes cortos.} \\\hline
 	Requisitos                         	   & \multicolumn{2}{p{10.25cm}}{RF-7, RF-7.1, RF-7.2, RF-7.3, RF-7.4, RF-7.7 } \\\cline{1-3}
-	Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Tener un compañero con el que batirnos.}   \\\hline
+	Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Tener un compañero con el que batirse.}   \\\hline
 	\multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-	& 1    & Abrir el menú lateral para navegar a la pestaña de juegos, una vez dentro tenemos que elegir el juego del cuatro en raya.
+	& 1    & Abrir el menú lateral para navegar a la pestaña de juegos, una vez dentro se debe elegir el juego del cuatro en raya.
 	\\\cline{2-3}
-	& 2    & Dependiendo del rol que tomemos para el juego, podemos compartir un código o ingresar este para comenzar con la partida.
+	& 2    & Dependiendo del rol que tomemos para el juego, podemos compartir un código o ingresar este para comenzar la partida.
 	\\\cline{2-3}
 	& 3    & Si no se encuentra el rival, la partida finalizará.
 	\\\cline{2-3}
